chore: readme update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react-router-radix-template",
+  "name": "stui",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
