--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "api:gen": "openapi-typescript https://api.spacetraders.io/v2/documentation/json --output ./app/api/types.ts --enum --enum-values --dedupe-enums --export-type --root-types --make-paths-enum"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.3.0",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "@tanstack/react-query": "^5.90.21",
     "isbot": "^5.1.31",
     "next-themes": "^0.4.6",
+    "openapi-fetch": "^0.17.0",
+    "openapi-react-query": "^0.5.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router": "7.12.0"
@@ -23,9 +27,12 @@
   "devDependencies": {
     "@react-router/dev": "7.12.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/eslint-plugin-query": "^5.91.4",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "msw": "^2.12.10",
+    "openapi-typescript": "^7.13.0",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
