feat(client): generate hey-api client

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
+    "client:gen": "openapi-ts",
     "api:gen": "openapi-typescript https://api.spacetraders.io/v2/documentation/json --output ./app/api/types.ts --enum --enum-values --dedupe-enums --export-type --root-types --make-paths-enum"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "react-router": "7.12.0"
   },
   "devDependencies": {
+    "@hey-api/openapi-ts": "0.92.4",
     "@react-router/dev": "7.12.0",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/eslint-plugin-query": "^5.91.4",
