--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "@tanstack/react-query": "^5.90.21",
+    "date-fns": "^4.1.0",
     "isbot": "^5.1.31",
     "next-themes": "^0.4.6",
     "openapi-fetch": "^0.17.0",
